[project]
name = "modernbert-flax"
version = "0.1.0"
description = "ModernBERT in Flax NNX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flax>=0.12.3",
  "huggingface-hub>=1.4.1",
  "jax>=0.9.0.1",
  "safetensors>=0.7.0",
]

[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["ruff>=0.15.0"]
test = ["pytest>=9.0.2", "torch>=2.10.0", "transformers>=5.1.0"]
